Added a bunch of tests for contacts/comments/likes and fixed few bugs
